# sihbackend2

./: app.py  model2.py  pyproject.toml  requirements.txt  vercel.json
static/react/: asset-manifest.json
static/react/static/css/: main.73eed338.css  main.73eed338.css.map
static/react/static/js/: main.2f9f4592.js  main.2f9f4592.js.LICENSE.txt
templates/: index.html
