[tool.poetry]
name = "sihbackend"
version = "0.1.0"
description = ""
authors = ["HarshPrajapati2003 <hrsdp2683@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.4"
flask = "^2.3.3"
flask-cors = "^4.0.0"
pillow = "^10.0.1"
tensorflow = "^2.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
